syntax = "proto3";

package com.yc.proto;

option java_package = "com.yc.proto";

option java_outer_classname = "noval";

//     生成多个文件
option java_multiple_files = true;

service NovalService{

    rpc getNovalByChapter(NovalRequest) returns (NovalReponse) {}

//    参数类型  必须是message 类型
    rpc getStudentsByAge(StudentRequest) returns (stream StudentResponse) {}

    rpc getStudentByAgeStream(stream StudentRequest)returns (StudentResponseList){}

    rpc sendAndReceiveMessage(stream StreamRequest) returns (stream StreamResponse){}

}

message StreamRequest{
     string request_info = 1;
}
message StreamResponse{
    string response_info = 1 ;
}

message StudentResponseList{

    repeated StudentResponse studentResponse = 1;
}

message StudentRequest{
    int32 age = 1;
}

message StudentResponse{
    string name=1;
    int32 age=2;
    string city=3;
}

message NovalRequest{

    int32 id = 1;
    string novalName = 2;
    string chapterName = 3;
    string content = 4;
}


message NovalReponse{

    int32 id = 1;
    string novalName = 2;
    string chapterName = 3;
    string chapterContent = 4;
}
